Fix: Gap between buttons wouldn't apply in some cases.

--- a/src/styles/timer.scss
+++ b/src/styles/timer.scss
@@ -17,7 +17,7 @@
 #buttons {
   display: flex;
   margin-top: 12px;
-  grid-gap: calc(var(--marginMobile) / 2);
+  gap: var(--marginMobile);
 
   & .button-red {
     background: var(--secondary-darker);
